--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15"
